# robotic_perception

./: README.md
pcd_files/: 0000_cloud.pcd  0001_cloud.pcd  0002_cloud.pcd  0003_cloud.pcd  0004_cloud.pcd  0005_cloud.pcd  0006_cloud.pcd  0007_cloud.pcd
src/: CMakeLists.txt  cylinder_segmentation.cpp
src/correspondence_grouping/: CMakeLists.txt  correspondence_grouping.cpp
src/filtering/: statistical_removal.cpp
